kubernetes/apps/default/unifi/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  annotations:
    # Pins the same IP the old MetalLB-backed service used, so device
    # inform URLs (http://192.168.1.222:8080/inform) never had to change.
    lbipam.cilium.io/ips: "192.168.1.222"
  labels:
    app: unifi
spec:
  type: LoadBalancer
  ports:
    - name: inform
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: stun
      port: 3478
      targetPort: 3478
      protocol: UDP
    - name: portal
      port: 8880
      targetPort: 8880
      protocol: TCP
    - name: speedtest
      port: 6789
      targetPort: 6789
      protocol: TCP
    - name: webui
      port: 8443
      targetPort: 8443
      protocol: TCP
  selector:
    app: unifi
